fix responsive word wrapping on citations page

--- a/www/public_src/styles/citations.less
+++ b/www/public_src/styles/citations.less
@@ -1,5 +1,7 @@
 #citations{
   text-align: left;
+  word-wrap: break-word;
+  
   a{
     color: #475C84;
   }
