--- a/www/public_src/styles/enigma.less
+++ b/www/public_src/styles/enigma.less
@@ -8,6 +8,7 @@
   font-size: 110%;
   padding: 15px;
   margin-top: 20px;
+  word-wrap: break-word;
   pre{
     padding:0;
     margin:0;
